--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                     <a href="#" data-target="mobile-nav" class="sidenav-trigger pulse"><i
                             class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="#bio">Tentang</a></li>
-                        <li><a href="#keterampilan">Keterampilan</a></li>
-                        <li><a href="#pengalaman">Pengalaman</a></li>
-                        <li><a href="#pencapaian">Pecapaian</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#daftarisi">Daftar Isi</a></li>
+                        <li><a href="#bab1">BAB I </a></li>
+                        <li><a href="#bab2">BAB II</a></li>
+                        <li><a href="#bab3">BAB III </a></li>
+                        <li><a href="#pustaka">DAFTAR PUSTAKA</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,26 +40,24 @@
                 <div class="background">
                     <img src="img/hero.png">
                 </div>
-                <a href="#top" class="scrollspy"><img class="circle" src="img/aku.png"></a>
-                <span class="white-text name">Mukhammad Nuruddin Ismail</span>
-                <span class="white-text email">nurudinismail69@gmail.com</span>
+                <a href="#bio" class="scrollspy"><img class="circle" src="img/icon.png"></a>
+                <span class="white-text name">Kelompok B2</span>
             </div>
         </li>
-        <li><a href="#bio" class="sidenav-close"><i class="material-icons">account_circle</i>Tentang</a></li>
+        <li><a href="#daftarisi">Daftar Isi</a></li>
         <div class="divider"></div>
-        <li></i><a href="#keterampilan" class="sidenav-close"><i
-                    class="material-icons">fitness_center</i>Keterampilan</a></li>
+        <li><a href="#bab1">BAB I </a></li>
         <div class="divider"></div>
-        <li></i><a href="#pengalaman" class="sidenav-close"><i class="material-icons">hourglass_full</i>Pengalaman</a>
-        </li>
+        <li><a href="#bab2">BAB II</a></li>
         <div class="divider"></div>
-        <li></i><a href="#pencapaian" class="sidenav-close"><i class="material-icons">star</i>Pecapaian</a></li>
+        <li><a href="#bab3">BAB III </a></li>
         <div class="divider"></div>
-        <li></i><a href="#portfolio" class="sidenav-close"><i class="material-icons">widgets</i>Portfolio</a></li>
+        <li><a href="#pustaka">DAFTAR PUSTAKA</a></li>
+        <div class="divider"></div>
     </ul>
 
     <!-- SLIDER -->
-    <div class="jumbotron">
+    <div class="jumbotron" id="bio">
         <div class="caption center">
             <h5>Pemanfaatan Ampas Sari Apel Menjadi Perkedel Guna Meningkatkan Perekonomian Masyarakat Desa Sisir</h5>
             <p class="">Praktikum Penyuluhan 2020 </p>
@@ -98,7 +96,7 @@
     </div>
 
     <!-- KATA PENGANTAR -->
-    <section id="bio" class="bio scrollspy">
+    <section id="katapengantar" class="bio scrollspy">
         <div class="container">
             <div class="row center">
                 <br><br>
@@ -142,7 +140,7 @@
 
 
     <!-- PENGALAMAN TEKNIS -->
-    <div class="jumbotron scrollspy" id="pengalaman">
+    <div class="jumbotron scrollspy" id="daftarisi">
         <div class="container">
             <h4 class="grey-text text-darken-3 center">Daftar Isi</h4>
             <ul class="collection">
@@ -277,7 +275,7 @@
     </div> -->
 
     <!-- BAB 1 -->
-    <section id="portfolio" class="portfolio scrollspy">
+    <section id="bab1" class="bab1 scrollspy">
         <div class="container">
             <br>
             <h5 class="grey-text text-darken-3 center"> BAB I</h5>
@@ -346,7 +344,7 @@
     </section>
 
     <!-- BAB 2 -->
-    <section id="portfolio" class="portfolio scrollspy">
+    <section id="bab2" class="bab2 scrollspy">
         <div class="container">
             <br>
             <h5 class="grey-text text-darken-3 center"> BAB II</h5>
@@ -433,7 +431,7 @@
     </section>
 
     <!-- BAB 3 -->
-    <section id="portfolio" class="portfolio scrollspy">
+    <section id="bab3" class="bab3 scrollspy">
         <div class="container">
             <br>
             <h5 class="grey-text text-darken-3 center"> BAB III</h5>
@@ -669,9 +667,38 @@
         <br>
     </section>
 
+    <!-- DAFTAR PUSTAKA -->
+    <section class="pustaka" id="pustaka">
+        <div class="container">
+            <h5 class="grey-text text-darken-3 center"> Daftar Pustaka</h5>
+            <div class="divider"></div>
+            <br>
+            <ul class="collection">
+                <li class="collection-item">
+                    Marliani Novi. 2014. PEMANFAATAN LIMBAH RUMAH TANGGA (SAMPAH ANORGANIK) SEBAGAI BENTUK IMPLEMENTASI
+                    DARI
+                    PENDIDIKAN LINGKUNGAN HIDUP. Jurnal Formatif. 4(2):124-132.
+                </li>
+                <li class="collection-item">
+                    Subagyo Purwo, Zubaidi Ahmad. 2010. Pemungutan Pektin dari Kulit dan Amapas Apel Secara Ekstraksi.
+                    10(2): 47-51.
+                </li>
+                <li class="collection-item">
+                    Rohmiatin. 2019. PENGARUH KUALITAS PRODUK , HARGA, STRATEGI PROMOSI DAN LOKASI TERHADAP KEPUTUSAN
+                    PEMBELIAN KONSUMEN PADA HOME INDUSTRI PRODUK KECAP RAHAYU DI KECAMATAN TALUN, KABUPATEN BLITAR.
+                    Skripsi.
+                </li>
+                <li class="collection-item">
+                    https://cookpad.com/id/resep/9720696-perkedel-ampas-apel
+                </li>
+            </ul>
+        </div>
+
+        <br>
+    </section>
     <!-- FOOTER -->
     <footer class="red darken-1 grey-text text-lighten-3 center-align">
-        <p class="flow-text">&copy;nrdnisml 2020</p>
+        <p class="flow-text">&copy;KelompokB2 2020</p>
     </footer>
 
     <!--JavaScript at end of body for optimized loading-->
