--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <div class="navbar-fixed">
-        <nav class="red darken-4">
+        <nav class="deep-purple darken-4">
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="#top" class="brand-logo">Kelompok B2</a>
@@ -38,7 +38,7 @@
         <li>
             <div class="user-view">
                 <div class="background">
-                    <img src="img/hero.png">
+                    <img src="img/bg.png">
                 </div>
                 <a href="#bio" class="scrollspy"><img class="circle" src="img/icon.png"></a>
                 <span class="white-text name">Kelompok B2</span>
@@ -668,9 +668,9 @@
     </section>
 
     <!-- DAFTAR PUSTAKA -->
-    <section class="pustaka" id="pustaka">
+    <section class="pustaka row grey darken-4 pencapaian scrollspy" id="pustaka">
         <div class="container">
-            <h5 class="grey-text text-darken-3 center"> Daftar Pustaka</h5>
+            <h5 class="grey-text text-lighten-3 center"> Daftar Pustaka</h5>
             <div class="divider"></div>
             <br>
             <ul class="collection">
@@ -689,7 +689,8 @@
                     Skripsi.
                 </li>
                 <li class="collection-item">
-                    https://cookpad.com/id/resep/9720696-perkedel-ampas-apel
+                    <a href="https://cookpad.com/id/resep/9720696-perkedel-ampas-apel">
+                        https://cookpad.com/id/resep/9720696-perkedel-ampas-apel</a>
                 </li>
             </ul>
         </div>
@@ -697,7 +698,7 @@
         <br>
     </section>
     <!-- FOOTER -->
-    <footer class="red darken-1 grey-text text-lighten-3 center-align">
+    <footer class="deep-purple accent-4 grey-text text-lighten-3 center-align">
         <p class="flow-text">&copy;KelompokB2 2020</p>
     </footer>
 
