--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </ul>
 
     <!-- SLIDER -->
-    <div class="jumbotron" id="bio">
+    <div class="jumbotron scrollspy" id="bio">
         <div class="caption center">
             <h5>Pemanfaatan Ampas Sari Apel Menjadi Perkedel Guna Meningkatkan Perekonomian Masyarakat Desa Sisir</h5>
             <p class="">Praktikum Penyuluhan 2020 </p>
