--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </div>
                     <div class="collapsible-body">
                         <ul class="collection">
-                            <li class="collection-item"><a href="#1.1" class="scrollspy"><b>1.1 Latar Belakang
+                            <li class="collection-item"><a href="#bab1" class="scrollspy"><b>1.1 Latar Belakang
 
                                     </b></a></li>
                             <li class="collection-item"><a href="#1.2" class="scrollspy"><b>1.2 Rumusan
@@ -178,7 +178,7 @@
                     </div>
                     <div class="collapsible-body">
                         <ul class="collection">
-                            <li class="collection-item"><a href="#2.1"><b>2.1 Gambaran Umum
+                            <li class="collection-item"><a href="#bab2"><b>2.1 Gambaran Umum
                                         Kegiatan Penyuluhan
                                     </b></a></li>
                             <li class="collection-item"><a href="#2.2"><b>2.2 Gambaran Umum
@@ -195,7 +195,7 @@
                     </div>
                     <div class="collapsible-body">
                         <ul class="collection">
-                            <li class="collection-item"><a href="#3.1"><b>3.1 Metode Pelaksanaan
+                            <li class="collection-item"><a href="#bab3"><b>3.1 Metode Pelaksanaan
                                     </b></a></li>
                             <li class="collection-item"><a href="#3.2"><b>3.2 Materi Penyuluhan
                                     </b></a></li>
